--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -14,18 +14,22 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatBtn"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:src="@drawable/add"
             android:layout_marginStart="280dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="150dp"
+            android:layout_marginBottom="192dp"
+            android:contentDescription="@string/addteam"
             android:background="@drawable/round_button_float"
-            android:clickable="true"
-            android:src="@drawable/add"
+            app:fabCustomSize="65dp"
+            app:tint="@color/white"
+            app:backgroundTint="@color/main_color"
+            app:shapeAppearance="@drawable/round_button_float"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:focusable="true" />
+            app:layout_constraintHorizontal_bias="0.256"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
