--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="grey">#CCCACA</color>
     <color name="main_color">#072B5A</color>
     <color name="bgScreenColor">#E1E0E0</color>
+    <color name="underline">#D8D6D6</color>
 </resources>
