Updated Floating Button of Teams

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,4 +17,10 @@
         <item name="fontFamily">@font/oswaldmedium</item>
     </style>
 
+    <!-- Rounded corners theme-->
+    <style name="RoundCorner" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">30dp</item>
+        <item name="color">@color/white</item>
+    </style>
 </resources>
