--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -16,20 +16,19 @@
             android:id="@+id/floatBtn"
             android:layout_width="65dp"
             android:layout_height="65dp"
-            android:src="@drawable/add"
             android:layout_marginStart="280dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="192dp"
-            android:contentDescription="@string/addteam"
+            android:layout_marginBottom="116dp"
             android:background="@drawable/round_button_float"
-            app:fabCustomSize="65dp"
-            app:tint="@color/white"
+            android:contentDescription="@string/addteam"
+            android:src="@drawable/add"
             app:backgroundTint="@color/main_color"
-            app:shapeAppearance="@drawable/round_button_float"
+            app:fabCustomSize="65dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.256"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:shapeAppearance="@drawable/round_button_float"
+            app:tint="@color/white" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/teamRecyclerview"
