--- a/app/src/main/res/layout/create_team_layout.xml
+++ b/app/src/main/res/layout/create_team_layout.xml
@@ -7,7 +7,6 @@
     android:layout_marginTop="20dp"
     android:layout_marginStart="10dp"
     android:layout_marginHorizontal="8dp"
-    android:background="@drawable/rounded_layout_design"
     android:elevation="6dp"
     android:paddingBottom="8dp"
     android:paddingTop="8dp">
@@ -27,17 +26,24 @@
             android:textSize="30dp"
             android:text="Create Team" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/oswaldregular"
+            android:textColor="@color/grey"
+            android:text="To create team your own teams!" />
+
         <EditText
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/oswaldregular"
-            android:textColor="@color/grey"
+            android:textColor="@color/black"
             android:inputType="text"
             android:layout_marginBottom="10dp"
             android:hint="Enter your Team Name"/>
-        
-        <LinearLayout
+
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -65,7 +71,7 @@
                 android:fontFamily="@font/oswaldregular"
                 android:background="@drawable/round_buttons"/>
 
-        </LinearLayout>
+        </LinearLayout>-->
 
     </LinearLayout>
     
