--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
         <item name="android:statusBarColor">@color/main_color</item>
         <item name="titleTextColor">@color/white</item>
         <item name="fontFamily">@font/oswaldmedium</item>
+        <item name="homeAsUpIndicator">@drawable/baseline_arrow_back_ios_24</item>
     </style>
 
     <!-- Rounded corners theme-->
