--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgScreenColor"
     tools:context=".PlayerActivity">
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playerRV"
@@ -15,5 +15,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatPlayerBtn"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="280dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="116dp"
+        android:background="@drawable/round_button_float"
+        android:contentDescription="@string/addplayer"
+        android:src="@drawable/baseline_person_add_alt_24"
+        app:backgroundTint="@color/main_color"
+        app:fabCustomSize="65dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:shapeAppearance="@drawable/round_button_float"
+        app:tint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
