--- a/app/src/main/res/layout/players_layout.xml
+++ b/app/src/main/res/layout/players_layout.xml
@@ -22,8 +22,7 @@
         android:text="PN"
         android:background="@drawable/round_textview"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/RoundCorner" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
         android:layout_width="match_parent"
