--- a/app/src/main/res/layout/dot_popup_layout.xml
+++ b/app/src/main/res/layout/dot_popup_layout.xml
@@ -19,31 +19,57 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tvHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/oswaldbold"
             android:textColor="@color/black"
-            android:layout_marginTop="10dp"
-            android:textSize="30sp"
-            android:text="Update Team" />
+            android:text="End of First Innings"
+            android:textSize="35dp"/>
 
         <TextView
+            android:id="@+id/tvScoredruns"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/oswaldregular"
-            android:textColor="@color/grey"
-            android:text="To edit/update your team name!" />
-
-        <EditText
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/oswaldregular"
             android:textColor="@color/black"
+            android:text="Scored runs"
+            android:textSize="25dp"/>
+
+        <EditText
+            android:id="@+id/etScoreruns"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:fontFamily="@font/oswaldregular"
+            android:textColor="@color/black"
+            android:layout_marginTop="15sp"
             android:inputType="text"
-            android:layout_marginBottom="10dp"
-            android:hint="Team Name"/>
+            android:hint="0" />
+
+        <TextView
+            android:id="@+id/tvPenaltyruns"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/oswaldregular"
+            android:textColor="@color/black"
+            android:text="Penalty runs?"
+            android:textSize="25dp"/>
+
+        <EditText
+            android:id="@+id/etPenaltyruns"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:fontFamily="@font/oswaldregular"
+            android:textColor="@color/black"
+            android:layout_marginTop="15sp"
+            android:inputType="text"
+            android:hint="0" />
 
     </LinearLayout>
-    
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
