--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,9 +30,7 @@
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/oswaldbold"
                 android:text="@string/teams_heading"
-                android:textSize="30sp"
-                tools:layout_editor_absoluteX="81dp"
-                tools:layout_editor_absoluteY="355dp" />
+                android:textSize="30sp"/>
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
@@ -275,7 +273,7 @@
         <Button
             android:id="@+id/btnStart"
             android:layout_width="250dp"
-            android:layout_height="60dp"
+            android:layout_height="70dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
