--- a/app/src/main/res/layout/activity_retire.xml
+++ b/app/src/main/res/layout/activity_retire.xml
@@ -58,7 +58,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter new Player details"
+            android:hint="Enter new player details"
             android:fontFamily="@font/oswaldbold"
             android:textColor="@color/black"
             android:textSize="20sp"
