--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#CCCACA</color>
+    <color name="green">#65F100</color>
     <color name="main_color">#072B5A</color>
     <color name="bgScreenColor">#E1E0E0</color>
     <color name="underline">#D8D6D6</color>
+    <color name="player">#BF072B5A</color>
     <color name="teamLogo">#EC5656</color>
 </resources>
