--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#CCCACA</color>
+    <color name="dark_grey">#7C7979</color>
     <color name="green">#65F100</color>
     <color name="main_color">#072B5A</color>
     <color name="bgScreenColor">#E1E0E0</color>
