--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -131,6 +131,8 @@
                         android:layout_height="48dp"
                         android:layout_marginStart="20dp"
                         android:textSize="16sp"
+                        app:buttonTint="@color/main_color"
+                        android:buttonTint="@color/main_color"
                         android:fontFamily="@font/oswaldregular"
                         android:text="Host Team" />
 
@@ -139,7 +141,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="48dp"
                         android:textSize="16sp"
+                        app:buttonTint="@color/main_color"
                         android:layout_marginStart="90dp"
+                        android:buttonTint="@color/main_color"
                         android:fontFamily="@font/oswaldregular"
                         android:text="Visitor Team"/>
                 </RadioGroup>
@@ -199,6 +203,8 @@
                         android:layout_height="48dp"
                         android:layout_marginStart="20dp"
                         android:textSize="16sp"
+                        app:buttonTint="@color/main_color"
+                        android:buttonTint="@color/main_color"
                         android:fontFamily="@font/oswaldregular"
                         android:text="Batting" />
 
@@ -207,6 +213,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="48dp"
                         android:textSize="16sp"
+                        app:buttonTint="@color/main_color"
                         android:layout_marginStart="105dp"
                         android:fontFamily="@font/oswaldregular"
                         android:text="Bowling"/>
