--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -548,12 +548,14 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldbold"
                         android:text="Wide"
+                        app:buttonTint="@color/main_color"
                         android:textColor="@color/black" />
 
                     <CheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        app:buttonTint="@color/main_color"
                         android:fontFamily="@font/oswaldbold"
                         android:text="No Ball"
                         android:textColor="@color/black" />
@@ -564,6 +566,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldbold"
                         android:text="Byes"
+                        app:buttonTint="@color/main_color"
                         android:textColor="@color/black" />
 
                     <CheckBox
@@ -572,6 +575,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldbold"
                         android:text="Leg Byes"
+                        app:buttonTint="@color/main_color"
                         android:textColor="@color/black" />
 
                 </LinearLayout>
@@ -587,6 +591,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        app:buttonTint="@color/main_color"
                         android:fontFamily="@font/oswaldbold"
                         android:text="Wicket"
                         android:textColor="@color/black" />
