--- a/app/src/main/res/layout/create_team_layout.xml
+++ b/app/src/main/res/layout/create_team_layout.xml
@@ -34,6 +34,7 @@
             android:text="To create your own teams!" />
 
         <EditText
+            android:id="@+id/txtNewTeam"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
