--- a/app/src/main/res/layout/update_team_layout.xml
+++ b/app/src/main/res/layout/update_team_layout.xml
@@ -35,6 +35,7 @@
             android:text="To edit/update your team name!" />
 
         <EditText
+            android:id="@+id/txtNewTeamName"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
