--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -225,7 +225,7 @@
 
                     <TextView
                         android:id="@+id/tvPlayerStrike"
-                        android:layout_width="wrap_content"
+                        android:layout_width="35dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
                         android:layout_weight="2"
@@ -235,7 +235,8 @@
 
                     <TextView
                         android:id="@+id/tvSplayerRuns"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="30dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -244,7 +245,8 @@
 
                     <TextView
                         android:id="@+id/tvSplayerBalls"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="25dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -253,7 +255,8 @@
 
                     <TextView
                         android:id="@+id/tvSplayer4s"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="20dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -262,7 +265,8 @@
 
                     <TextView
                         android:id="@+id/tvSplayer6s"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="10dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -271,7 +275,8 @@
 
                     <TextView
                         android:id="@+id/tvSplayerSR"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="10dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -288,7 +293,7 @@
 
                     <TextView
                         android:id="@+id/tvPlayerNonStrike"
-                        android:layout_width="wrap_content"
+                        android:layout_width="33dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="3dp"
@@ -299,7 +304,8 @@
 
                     <TextView
                         android:id="@+id/tvNSplayerRuns"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="30dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -308,7 +314,8 @@
 
                     <TextView
                         android:id="@+id/tvNSplayerBalls"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="25dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -317,7 +324,8 @@
 
                     <TextView
                         android:id="@+id/tvNSplayer4s"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="20dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -326,7 +334,8 @@
 
                     <TextView
                         android:id="@+id/tvNSplayer6s"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="10dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -335,7 +344,8 @@
 
                     <TextView
                         android:id="@+id/tvNSplayerSR"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="10dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
