--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -60,8 +60,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="180dp"
-                        android:layout_marginEnd="30dp"
+                        android:layout_marginStart="190dp"
                         android:fontFamily="@font/oswaldsemibold"
                         android:text="CRR"
                         android:textColor="@color/black" />
@@ -75,7 +74,7 @@
 
                     <TextView
                         android:id="@+id/tvTeamRuns"
-                        android:layout_width="wrap_content"
+                        android:layout_width="20dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
                         android:fontFamily="@font/oswaldsemibold"
@@ -86,7 +85,6 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:fontFamily="@font/oswaldsemibold"
                         android:text="-"
                         android:textColor="@color/black"
@@ -94,7 +92,7 @@
 
                     <TextView
                         android:id="@+id/tvTeamWickets"
-                        android:layout_width="wrap_content"
+                        android:layout_width="20dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:fontFamily="@font/oswaldsemibold"
@@ -105,15 +103,15 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
                         android:fontFamily="@font/oswaldsemibold"
                         android:text="("
                         android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/tvTeamOvers"
-                        android:layout_width="wrap_content"
+                        android:layout_width="18dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="2dp"
                         android:fontFamily="@font/oswaldsemibold"
                         android:text="0.0"
                         android:textColor="@color/black" />
@@ -127,7 +125,7 @@
 
                     <TextView
                         android:id="@+id/tvTeamCRR"
-                        android:layout_width="wrap_content"
+                        android:layout_width="30dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="200dp"
                         android:fontFamily="@font/oswaldsemibold"
@@ -369,7 +367,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:layout_weight="2"
+                        android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
                         android:text="Bowler"
                         android:textColor="@color/black" />
@@ -431,17 +429,18 @@
 
                     <TextView
                         android:id="@+id/tvBowlerName"
-                        android:layout_width="wrap_content"
+                        android:layout_width="35dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:layout_weight="2"
+                        android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
-                        android:text="Bowler Name"
+                        android:text="B Name"
                         android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/tvOvers"
-                        android:layout_width="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_marginStart="40dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -450,7 +449,8 @@
 
                     <TextView
                         android:id="@+id/tvMaiden"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
+                        android:layout_marginStart="20dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -459,9 +459,9 @@
 
                     <TextView
                         android:id="@+id/tvBowlerRuns"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="15dp"
                         android:layout_marginStart="10dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
                         android:text="0"
@@ -469,7 +469,7 @@
 
                     <TextView
                         android:id="@+id/tvBowlerWickets"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
@@ -478,7 +478,7 @@
 
                     <TextView
                         android:id="@+id/tvER"
-                        android:layout_width="wrap_content"
+                        android:layout_width="15dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/oswaldsemibold"
