--- a/app/src/main/res/layout/activity_target.xml
+++ b/app/src/main/res/layout/activity_target.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgScreenColor"
-    tools:context=".CongratulationActivity">
+    tools:context=".TargetActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/oswaldsemibold"
             android:layout_marginTop="50dp"
-            android:text="Congratulations"
+            android:text="End of the first innings"
             android:textSize="40sp"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,15 +43,25 @@
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
             android:fontFamily="@font/oswaldsemibold"
-            android:text="Team Name"/>
+            android:text="Target"/>
 
         <TextView
+            android:id="@+id/tvTeamTarget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:fontFamily="@font/oswaldsemibold"
-            android:textSize="30sp"
-            android:text="Team-1 won by 10 Wicket"/>
+            android:textSize="20sp"
+            android:text="Team-1 needs 20 runs in 2 overs"/>
+
+        <TextView
+            android:id="@+id/tvRunrate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:fontFamily="@font/oswaldsemibold"
+            android:textSize="20sp"
+            android:text="Required Run Rate: 14.00"/>
 
     </LinearLayout>
 
