--- a/app/src/main/res/layout/activity_congratulation.xml
+++ b/app/src/main/res/layout/activity_congratulation.xml
@@ -10,8 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center|top"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,11 +20,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/oswaldsemibold"
             android:layout_marginTop="50dp"
+            android:fontFamily="@font/oswaldsemibold"
             android:text="Congratulations"
-            android:textSize="40sp"
             android:textColor="@color/black"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,17 +34,25 @@
             android:layout_height="400dp"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/trophyanim"/>
+            app:lottie_rawRes="@raw/trophyanim" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/oswaldsemibold"
+            android:text="Team"
+            android:textColor="@color/black"
+            android:textSize="35sp" />
 
         <TextView
             android:id="@+id/tvWinningTeam"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40sp"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/black"
             android:fontFamily="@font/oswaldsemibold"
-            android:text="Team Won: Team Name"/>
+            android:text="Team Name"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
 
     </LinearLayout>
 
