--- a/app/src/main/res/layout/activity_new_bowler.xml
+++ b/app/src/main/res/layout/activity_new_bowler.xml
@@ -32,26 +32,26 @@
             android:id="@+id/editTextText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/oswaldbold"
-            android:textColor="@color/black"
-            android:layout_marginTop="50dp"
             android:layout_marginStart="30dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="30dp"
             android:ems="10"
+            android:fontFamily="@font/oswaldbold"
+            android:hint="Enter player name"
             android:inputType="text"
-            android:hint="Enter player name" />
+            android:textColor="@color/black" />
 
         <Button
             android:id="@+id/btnStart"
             android:layout_width="250dp"
             android:layout_height="70dp"
-            android:layout_marginTop="24dp"
             android:layout_gravity="center"
-            android:fontFamily="@font/oswaldregular"
+            android:layout_marginTop="24dp"
             android:backgroundTint="@color/main_color"
-            android:textSize="20sp"
+            android:fontFamily="@font/oswaldregular"
+            android:text="Done"
             android:textColor="@color/white"
-            android:text="Done" />
+            android:textSize="20sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
