--- a/app/src/main/res/layout/activity_player_stat.xml
+++ b/app/src/main/res/layout/activity_player_stat.xml
@@ -7,16 +7,15 @@
     android:background="@color/bgScreenColor"
     tools:context=".PlayerStatActivity">
 
-
     <ImageView
         android:id="@+id/imageViewPP"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@color/main_color"
+        android:src="@drawable/baseline_person_outline_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/baseline_person_outline_24" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout5"
@@ -28,7 +27,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewPP">
-
 
         <TextView
             android:id="@+id/tvBatting"
@@ -61,6 +59,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"/>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
