--- a/app/src/main/res/layout/create_team_layout.xml
+++ b/app/src/main/res/layout/create_team_layout.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="10dp"
     android:layout_marginHorizontal="8dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="20dp"
     android:elevation="6dp"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,30 +20,30 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/oswaldbold"
-            android:textColor="@color/black"
             android:layout_marginTop="10dp"
-            android:textSize="30sp"
-            android:text="Create Team" />
+            android:fontFamily="@font/oswaldbold"
+            android:text="Create Team"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/oswaldregular"
-            android:textColor="@color/grey"
-            android:text="To create your own teams!" />
+            android:text="To create your own teams!"
+            android:textColor="@color/grey" />
 
         <EditText
             android:id="@+id/txtNewTeam"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/oswaldregular"
-            android:textColor="@color/black"
-            android:inputType="text"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:hint="Enter your Team Name"/>
+            android:fontFamily="@font/oswaldregular"
+            android:hint="Enter your Team Name"
+            android:inputType="text"
+            android:textColor="@color/black" />
 
     </LinearLayout>
-    
+
 </androidx.constraintlayout.widget.ConstraintLayout>
