--- a/app/src/main/res/layout/delete_layout.xml
+++ b/app/src/main/res/layout/delete_layout.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
     android:layout_marginHorizontal="8dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginEnd="10dp"
     android:elevation="6dp"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,19 +21,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/oswaldbold"
-            android:textColor="@color/black"
             android:layout_marginTop="10dp"
-            android:textSize="30sp"
-            android:text="@string/confrim" />
+            android:fontFamily="@font/oswaldbold"
+            android:text="@string/confrim"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/oswaldregular"
-            android:textColor="@color/grey"
-            android:text="Do you want to delete this record ?" />
+            android:text="Do you want to delete this record ?"
+            android:textColor="@color/grey" />
 
     </LinearLayout>
-    
+
 </androidx.constraintlayout.widget.ConstraintLayout>
