--- a/app/src/main/res/layout/host_scoresummary_layout.xml
+++ b/app/src/main/res/layout/host_scoresummary_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -9,60 +8,60 @@
     <TextView
         android:id="@+id/tvHostPlayerName"
         android:layout_width="170dp"
-        android:text="Host Player-Name"
-        android:fontFamily="@font/oswaldregular"
-        android:textColor="@color/black"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/oswaldregular"
+        android:text="Host Player-Name"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvHostRuns"
         android:layout_width="35dp"
-        android:text="0"
-        android:fontFamily="@font/oswaldregular"
-        android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/oswaldregular"
+        android:text="0"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvHostBalls"
-        android:text="0"
-        android:fontFamily="@font/oswaldregular"
-        android:textColor="@color/black"
         android:layout_width="45dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/oswaldregular"
+        android:text="0"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvHostFours"
-        android:text="0"
-        android:fontFamily="@font/oswaldregular"
-        android:textColor="@color/black"
         android:layout_width="20dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/oswaldregular"
+        android:text="0"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvHostSixes"
-        android:text="0"
-        android:fontFamily="@font/oswaldregular"
-        android:textColor="@color/black"
         android:layout_width="24dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/oswaldregular"
+        android:text="0"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvHostSR"
-        android:text="0.0"
-        android:fontFamily="@font/oswaldregular"
-        android:textColor="@color/black"
         android:layout_width="30dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/oswaldregular"
+        android:text="0.0"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
 </LinearLayout>
