--- a/app/src/main/res/layout/players_layout.xml
+++ b/app/src/main/res/layout/players_layout.xml
@@ -4,23 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
     android:layout_marginHorizontal="8dp"
+    android:layout_marginTop="10dp"
     android:background="@drawable/rounded_layout_design"
     android:elevation="6dp"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <TextView
         android:id="@+id/title_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="10dp"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="PN"
         android:background="@drawable/round_textview"
+        android:gravity="center"
+        android:text="PN"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,15 +39,15 @@
             android:fontFamily="@font/oswaldbold"
             android:text="Player Name"
             android:textColor="@color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <LinearLayout
             android:id="@+id/linearLayoutOpt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/tvPlayerName"
             android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:layout_below="@+id/tvPlayerName">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgPlayerEdit"
