--- a/app/src/main/res/layout/teams_layout.xml
+++ b/app/src/main/res/layout/teams_layout.xml
@@ -4,23 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
     android:layout_marginHorizontal="8dp"
+    android:layout_marginTop="10dp"
     android:background="@drawable/rounded_layout_design"
     android:elevation="6dp"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <TextView
         android:id="@+id/title_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="10dp"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="TN"
         android:background="@drawable/round_textview"
+        android:gravity="center"
+        android:text="TN"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,14 +39,14 @@
             android:fontFamily="@font/oswaldbold"
             android:text="Team Name"
             android:textColor="@color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <LinearLayout
             android:id="@+id/linearLayoutStat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@+id/tvTeamName">
+            android:layout_below="@+id/tvTeamName"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvMatchesHead"
@@ -55,7 +55,7 @@
                 android:fontFamily="@font/oswaldbold"
                 android:text="Matches : "
                 android:textColor="@color/grey"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tvMatchesValues"
@@ -74,7 +74,7 @@
                 android:fontFamily="@font/oswaldbold"
                 android:text="Won : "
                 android:textColor="@color/grey"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tvWonValues"
@@ -93,7 +93,7 @@
                 android:fontFamily="@font/oswaldbold"
                 android:text="Lost : "
                 android:textColor="@color/grey"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tvLostValues"
@@ -106,16 +106,16 @@
 
             <ImageView
                 android:id="@+id/imgEdit"
-                android:layout_marginStart="30dp"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_marginStart="30dp"
                 android:src="@drawable/baseline_edit_note_24" />
 
             <ImageView
                 android:id="@+id/imgDelete"
                 android:layout_width="30dp"
-                android:layout_marginStart="15dp"
                 android:layout_height="25dp"
+                android:layout_marginStart="15dp"
                 android:src="@drawable/baseline_delete_24" />
         </LinearLayout>
 
