--- a/app/src/main/res/layout/update_team_layout.xml
+++ b/app/src/main/res/layout/update_team_layout.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
     android:layout_marginHorizontal="8dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginEnd="10dp"
     android:elevation="6dp"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,30 +21,30 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/oswaldbold"
-            android:textColor="@color/black"
             android:layout_marginTop="10dp"
-            android:textSize="30sp"
-            android:text="Update Team" />
+            android:fontFamily="@font/oswaldbold"
+            android:text="Update Team"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/oswaldregular"
-            android:textColor="@color/grey"
-            android:text="To edit/update your team name!" />
+            android:text="To edit/update your team name!"
+            android:textColor="@color/grey" />
 
         <EditText
             android:id="@+id/txtNewTeamName"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/oswaldregular"
-            android:textColor="@color/black"
-            android:inputType="text"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:hint="Team Name"/>
+            android:fontFamily="@font/oswaldregular"
+            android:hint="Team Name"
+            android:inputType="text"
+            android:textColor="@color/black" />
 
     </LinearLayout>
-    
+
 </androidx.constraintlayout.widget.ConstraintLayout>
