--- a/app/src/main/res/layout/activity_score_summary.xml
+++ b/app/src/main/res/layout/activity_score_summary.xml
@@ -20,6 +20,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tvTossDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -116,10 +117,11 @@
 
             <TextView
                 android:id="@+id/dropdown_HostArrow"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_toRightOf="@+id/closeBracs1"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@+id/closeBracs1"
                 android:background="@drawable/baseline_keyboard_arrow_down_24" />
 
         </RelativeLayout>
@@ -209,10 +211,11 @@
 
             <TextView
                 android:id="@+id/dropdown_VisitorArrow"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_toRightOf="@+id/closeBracs2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@+id/closeBracs2"
                 android:background="@drawable/baseline_keyboard_arrow_down_24" />
 
         </RelativeLayout>
