--- a/app/src/main/res/layout/delete_layout.xml
+++ b/app/src/main/res/layout/delete_layout.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/oswaldbold"
-            android:text="@string/confrim"
+            android:text="@string/confirm"
             android:textColor="@color/black"
             android:textSize="30sp" />
 
